--- a/package.json
+++ b/package.json
@@ -4,33 +4,23 @@
   "description": "Muse Club Accounting Helper",
   "main": "index.tsx",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "^0.2.0",
     "lucide-react": "^0.292.0",
-    "recharts": "^2.10.3",
-    "@vercel/speed-insights": "^1.0.10",
-    "typescript": "^4.9.5",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "recharts": "^2.10.3"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.6",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20.11.0"
   }
 }
