feat: Configure project for Tailwind CSS CDN
The project is updated to use Tailwind CSS via CDN, simplifying the build process and removing the need for local Tailwind processing.

- `package.json`: Added `"type": "module"`.
- `tailwind.config.js`: Cleared content paths as Tailwind is now handled by CDN.
- `postcss.config.js`: Disabled local Tailwind CSS processing with a comment explaining the reason.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "muse-club-accounting",
   "version": "1.0.0",
+  "type": "module",
   "description": "Muse Club Accounting Helper",
   "main": "index.tsx",
   "scripts": {
