--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "muse-club-accounting",
   "version": "1.0.0",
   "type": "module",
-  "description": "Muse Club Accounting Helper",
-  "main": "index.tsx",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server/index.js",
+    "postinstall": "cd server && npm install"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/genai": "^0.2.0",
     "lucide-react": "^0.292.0",
     "recharts": "^2.10.3"
   },
