--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "postinstall": "cd server && npm install"
   },
   "dependencies": {
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.292.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.11.0"
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.6"
   }
 }
